kubernetes/deployment-development.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-graphql
  namespace: default
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: demo-graphql-app #deployment label
        track: development
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: demo-graphql-app
          imagePullPolicy: Always
          image: "<IMAGE>" #ci/cd would sed out the correct image tag
          ports:
            - name: ql
              containerPort: 4001
          resources:
            limits:
              cpu: 200m
              memory: "400Mi"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-graphql-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - demo-graphql.demo-example.com
      secretName: demo-example-secret
  rules:
    - host: demo-graphql.demo-example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: demo-graphql
              servicePort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: demo-graphql
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: demo-graphql-app
    track: development
  ports:
    - name: ql
      port: 4001
      protocol: TCP
      targetPort: 4001
  sessionAffinity: None
